...
    <string name="remote_widget_config_title_profile">Select the profile to use with the widget</string>
    <string name="standard">Standard Layout (Full)</string>
    <string name="quickzap">QuickZap Layout (Simple)</string>
    <string name="no_epg_available">Currently there is no EPG-Information available for this channel!</string>
    <string name="movie_detail_pane_empty">Choose Info on a recording to see its details here</string>
    <string name="epg_detail_pane_empty">Choose an event to see its details here</string>
    <string name="ok">OK</string>
    <string name="activate">Activate</string>
    <string name="confirm_delete_profile">Do you really want to delete this profile?</string>
    <string name="profile_activated">Activated profile</string>
    <string name="profile_not_activated">Error activating profile</string>
    <string name="profile_deleted">Deleted profile</string>
    <string name="profile">Profile</string>
...
    <string name="enable_volume_control">Enable Volume Control</string>
    <string name="enable_volume_control_long">Enable direct Volume Control using H/W-Buttons</string>
    <string name="download">Download</string>
    <string name="profiles">Profiles</string>
    <string name="enable_instant_zap">Instant zap</string>
    <string name="enable_instant_zap_long">Instant zap when short-tapping a service</string>
    <string name="show_now_playing_strip">Now-playing strip</string>
    <string name="show_now_playing_strip_long">Show what\'s currently on the box on TV &amp; Movies</string>
    <string name="simple_remote">Simple remote layout</string>
    <string name="vps_default">VPS default for new timers</string>
    <string name="vps_default_hint">Used when the receiver has the VPS plugin.</string>
    <string name="screenshot_saved">Screenshot saved to \'%s\'</string>
    <string name="imdb">IMDb</string>
...
    <string name="getting_list_of_files">Getting list of files</string>
    <string name="picon_sync_finished">Successfully downloaded %s picons</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="enable_animations_long">Enable additional view animations</string>
    <string name="enable_animations">Enable animations</string>
    <string name="use_name_as_picon_filename_long">Use service name as file name for picons</string>
    <string name="use_name_as_picon_filename">Picons by service name</string>
    <string name="picons_online_use_name">Use service name for online picons</string>
    <string name="picons_online_use_name_summary">Requests online picons by service name instead of the service reference.</string>
    <string name="picons_offline_global_hint">Synced (offline) picons and the sync itself use the global picon settings.</string>
    <string name="picons_profiles_hint">Profiles choose whether to use online picons and how they are named.</string>
    <string name="picons">Picons</string>
    <string name="developer_settings">Developer settings</string>
    <string name="dump_xml">Dump xml content</string>
    <string name="dump_xml_long">Dump xml content to the app cache</string>
    <string name="enable">Enable</string>
    <string name="epg_sync">Synchronizing EPG</string>

...
    <string name="video_bitrate">Video Bitrate</string>
    <string name="encoder_port">Stream port</string>
    <string name="tools">Tools</string>
    <string name="picon_sync_started">Picon synchronization started. See notifaction area for details.</string>
    <string name="picon_sync_running">There is still another picon synchronization running!</string>
    <string name="streaming">Streaming</string>
    <string name="integrated_video_player">Integrated video player</string>
    <string name="integrated_video_player_long">Use integrated videoplayer when playing streams</string>
    <string name="playback_failed">Playback failed!</string>
    <string-array name="theme_option_entries">
        <item>Day</item>
        <item>Night</item>
        <item>Follow System</item>
...
    <string name="theme_long">Day/Night Theme choices</string>
    <string-array name="hw_accel_entries">
        <item>Disabled</item>
        <item>Auto</item>
        <item>Force</item>
    </string-array>
    <string name="video_use_hw_accel">Hardware Acceleration</string>
    <string name="use_hw_accel">Accelerated decoding</string>
    <string name="use_hw_accel_long">Use Hardware acceleration for video decoding (%s)</string>
    <string name="video_player">Video Player</string>
    <string name="video_enable_gestures_long">Enable gestures for volume and brightness control</string>
    <string name="video_enable_gestures">Enable gestures</string>
    <string name="online_picons">Use "online" picons</string>
    <string name="online_picons_long">Don\'t use synced picons but load them directly via http(s). May cause consinderable traffic!</string>
    <string name="audio_tracks">Audio Tracks</string>
    <string name="subtitles">Subtitles</string>
...
