...
        syncPicons()
    }

    protected fun syncPicons() {
        val localPath = Picon.getBasepath(applicationContext)
        val remotePath = PreferenceManager.getDefaultSharedPreferences(baseContext)
            .getString(DreamDroid.PREFS_KEY_SYNC_PICONS_PATH, "/usr/share/enigma2/picon")
        Log.i(TAG, String.format("Syncing from %s to %s", remotePath, localPath))
        val client = FTPClient()

        @Suppress("UNUSED_VARIABLE")
        val config = FTPClientConfig()
        val p = DreamDroid.getCurrentProfile()
...
